tests/compile_fail/unsupported_enums.rs
use from_similar::FromSimilar;

#[derive(FromSimilar)]
enum Example {
	Unsupported,
}

fn main() {}
